@@ -1,76 +1,91 @@
 <includes>
 	<include name="Mod_SimpleHomeList">
 		<control type="group">
-			<animation effect="slide" start="0" end="0,164" time="250" condition="Skin.HasSetting(simple.lowerbar)">Conditional</animation>
 			<control type="group">
-				<posy>1100</posy>
-				<animation effect="slide" start="0" end="0,-870" time="550" delay="150" tween="back" easing="out" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>
-				<!-- DARK PANEL -->
+				<posy>200</posy>
+				<animation effect="fade" start="0" end="100" time="450" easing="inout" tween="cubic" reversible="false" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>
+				<animation effect="slide" start="0,500" end="0" time="450" easing="inout" tween="cubic" reversible="false" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>
+				<animation effect="slide" end="0,500" start="0" delay="450" time="450" easing="inout" tween="cubic" reversible="false" condition="![Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]">Conditional</animation>
+				<animation effect="fade" start="100" end="0" delay="450" time="450" easing="inout" tween="cubic" reversible="false" condition="![Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]">Conditional</animation>
+				<animation effect="slide" start="0" end="0,-230" time="250" condition="Control.HasFocus(83) | Control.HasFocus(84)">Conditional</animation>
 				<control type="image">
 					<posx>-10</posx>
-					<posy>-40</posy>
+					<posy>210</posy>
 					<width>1940</width>
-					<height>1000</height>
+					<height>450</height>
 					<texture border="15">arctic/common/panel.png</texture>
 					<bordertexture border="40">arctic/common/border-20.png</bordertexture>
 					<bordersize>20</bordersize>
+					<animation effect="zoom" start="-10,210,1940,450" end="-10,-20,1940,691" delay="450" time="350" easing="inout" tween="cubic" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>
 				</control>
 				<!-- BOTTOM FANART AND INFO PANEL -->
 				<control type="group">
-					<posy>-20</posy>
-					<animation effect="fade" start="0" end="100" time="450" tween="cubic" easing="out" reversible="false">VisibleChange</animation>
+					<posy>10</posy>
+					<visible>[Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]</visible>
+					<animation effect="fade" start="0" end="100" delay="750" time="450" tween="cubic" easing="out" reversible="false">VisibleChange</animation>					
 					<include>Home-Fanart-Info-Content</include>
 				</control>
 			
 				<!-- Panel -->
-				<control type="image">
-					<include>Mod_GreyPanelDimensions2</include>
-					
-				</control>
-				<!-- RECENT ITEMS -->
 				<control type="group">
-					<visible>!Container(525).OnNext + !Container(525).OnPrevious + !IsEmpty(Window(Home).Property(SkinWidgets_Running))</visible>
-					<animation type="Visible" reversible="false">
-						<effect type="slide" time="100" start="0" end="0"/>
-						<effect type="fade" delay="100" time="150" start="0" end="100"/>
-					</animation>
-					<!-- Combination Widgets -->
-					<control type="group">
-						<posy>-35</posy>
-						<visible>[Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])]</visible>
-						<include>HomeWidget-NewWidget</include>
+					<!--<animation effect="slide" start="0" end="0,-220"  delay="200" time="250" easing="inout" tween="cubic" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>-->
+					<control type="image">
+						<animation effect="slide" start="0" end="0,30" condition="true">Conditional</animation>
+						<height>400</height>
+						<include>Mod_GreyPanelDimensions2</include>
 					</control>
-					<!-- Singular Widgets -->
+					<!-- RECENT ITEMS -->
 					<control type="group">
-						<visible>[!Container(525).HasFocus(1) + !Container(525).HasFocus(2) + !Container(525).HasFocus(3)] | [Container(525).HasFocus(1) + !stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + !stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(3) + !stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])]</visible>
-						<control type="list" id="82">
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41550])">Skin.SetString(movie.widget.type,$LOCALIZE[575])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41552])">Skin.SetString(movie.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41550])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41551])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41553])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41550])">Skin.SetString(music.widget.type,$LOCALIZE[41555])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41554])">Skin.SetString(music.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) | ![Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)]">525</onup>
-							<ondown>525</ondown>
-							<onleft>82</onleft>
-							<onright>82</onright>
-							<posx>35</posx>
-							<posy>285</posy>
-							<scrolltime tween="cubic" easing="out">500</scrolltime>
-							<width>1860</width>
-							<height>600</height>
-							<viewtype>list</viewtype>
-							<orientation>horizontal</orientation>
-							<include>Mod_82Layout</include>
-							<content>
-								<include>Mod_82Content</include>
-							</content>
+						<visible>!Container(525).OnNext + !Container(525).OnPrevious + !IsEmpty(Window(Home).Property(SkinWidgets_Running))</visible>
+						<!-- Combination Widgets -->
+						<control type="group">
+							<posy>-35</posy>
+							<visible>[Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])]</visible>
+							<include>HomeWidget-NewWidget</include>
+						</control>
+						<!-- Singular Widgets -->
+						<control type="group">
+							<visible>[!Container(525).HasFocus(1) + !Container(525).HasFocus(2) + !Container(525).HasFocus(3)] | [Container(525).HasFocus(1) + !stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + !stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(3) + !stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])]</visible>
+							<control type="list" id="82">
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41550])">Skin.SetString(movie.widget.type,$LOCALIZE[575])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41552])">Skin.SetString(movie.widget.type,$LOCALIZE[41550])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41550])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41551])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41553])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41550])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41550])">Skin.SetString(music.widget.type,$LOCALIZE[41555])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41554])">Skin.SetString(music.widget.type,$LOCALIZE[41550])</onup>
+								<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
+								<onup condition="Skin.HasSetting(home.scrollablewidgets) | ![Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)]">525</onup>
+								<ondown>525</ondown>
+								<onleft>82</onleft>
+								<onright>82</onright>
+								<posx>35</posx>
+								<posy>285</posy>
+								<scrolltime tween="cubic" easing="out">500</scrolltime>
+								<width>1860</width>
+								<height>600</height>
+								<viewtype>list</viewtype>
+								<orientation>horizontal</orientation>
+								<include>Mod_82Layout</include>
+								<content>
+									<include>Mod_82Content</include>
+								</content>
+							</control>
+						</control>
+						<control type="label">
+							<posx>50</posx>
+							<posy>260</posy>
+							<label>$VAR[MixedWidget-Label]</label>
+							<align>left</align>
+							<font>Font-MixedWidget</font>
+							<textcolor>mod-infotags</textcolor>
+							<width>300</width>
+							<scroll>false</scroll>
+							<animation effect="fade" start="100" end="25" time="100" condition="!Control.HasFocus(82)">Conditional</animation>
 						</control>
 					</control>
 				</control>
